# mle-interview

./: .gitignore  README.md  _quarto.yml  ann.ipynb  convolution.ipynb  decision-treee.ipynb  gaussian-mixture.ipynb  index.qmd  kmeans.ipynb  knn.ipynb  linear-regression.ipynb  llama.ipynb  logistic-regression.ipynb  matrix_calculus.html  matrix_calculus.qmd  principal-component-analysis.ipynb  pyproject.toml  sampling.ipynb  softmax-regression.ipynb  transformer.ipynb  vq-vae.ipynb
.github/workflows/: publish.yml
ml-coding/: 1-linear-regression.ipynb  10-deep-learning-basic.ipynb  10-sampling.ipynb  11-loss-function.ipynb  11-optimizer.ipynb  12-training.ipynb  13-optimizer.ipynb  13-transformer.ipynb  14-llama.ipynb  15-diffusion.ipynb  16-llama.ipynb  18-metrics.ipynb  19-ensembling.ipynb  19-reinforcement-learning.ipynb  22-deployment-basics.ipynb  3-softmax-regression.ipynb  7-principal-component-analysis.ipynb  8-ann.ipynb  9-convolution.ipynb
ml-coding/applied-ml/: distributed-training-pipeline.ipynb
ml-coding/classical-ml/: linear-regression.ipynb  logistic-regression.ipynb  naive-bayes.ipynb  softmax-regression.ipynb
ml-coding/foundations/: matrix_calculus.qmd
