[project]
name = "mle-waymo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=1.26,<2",
    "pandas>=3.0.1",
    "torch==2.2.2",
    "torchvision==0.17.2",
]
